--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -106,7 +106,7 @@ spring:
             # 驱动代理
             driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
             # 数据库中表的前缀
-            tablePrefix: qrtz_
+            tablePrefix: QRTZ_
             # 是否集群
             isClustered: true
             clusterCheckinInterval: 10000
